--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
     "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
@@ -11,11 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
+    "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
-    "typescript": "^5.0.4"
+    "knex": "^2.4.2",
+    "sqlite3": "^5.1.6",
+    "typescript": "^5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@arthurpedroti/eslint-config": "^1.0.5",
+    "@arthurpedroti/eslint-config": "^1.0.7",
     "@types/node": "^18.15.11",
     "eslint": "^8.38.0",
     "tsx": "^3.12.6"
