--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,10 @@
   "devDependencies": {
     "@arthurpedroti/eslint-config": "^1.0.7",
     "@types/node": "^18.15.11",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.38.0",
-    "tsx": "^3.12.6"
+    "supertest": "^6.3.3",
+    "tsx": "^3.12.6",
+    "vitest": "^0.30.1"
   }
 }
